feat: enhance medication request handling with notifications and status updates